--- a/KaelKirk/JSONReader/.vscode/tasks.json
+++ b/KaelKirk/JSONReader/.vscode/tasks.json
@@ -2,13 +2,20 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build",
+            "label": "test",
             "command": "dotnet",
             "type": "process",
             "args": [
-                "build",
-                "${workspaceFolder}/src/Reader.ConsoleApp/Reader.ConsoleApp.csproj"
+                "test",
+                "${workspaceRoot}/test/Reader.Tests/Reader.Tests.csproj"
             ],
+            "group": "test",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared"
+            },
             "problemMatcher": "$msCompile"
         },
         {
